# UniversalStorage

./: CMakeLists.txt  LICENSE  README.md
src/: BPTree.cpp  BPTree.h  BPTreeStorage.cpp  BPTreeStorage.h  CMakeLists.txt  CachingProxyStorage.cpp  CachingProxyStorage.h  CityHash.cpp  DataSerializer.hpp  IBlockManager.h  IPhysicalStorage.h  IStorage.h  LRUCachingProxyStorage.cpp  LRUCachingProxyStorage.h  MappedFileBlockManager.cpp  MappedFileBlockManager.h  MountPoint.cpp  MountPoint.h  MountPointTree.cpp  MountPointTree.h  NaiveStorage.cpp  NaiveStorage.h  PathView.cpp  PathView.h  PhysicalStorage.cpp  PhysicalStorage.h  StorageAccessor.cpp  StorageAccessor.h  StorageAccessor.hpp  StorageAllocator.cpp  StorageAllocator.h  exceptions.h  function_checking.hpp  utils.cpp  utils.h  utils.hpp
tests/: CMakeLists.txt  CachingProxyStorageTest.cpp  MountPointTreeTest.cpp  NaiveStorageTests.cpp  PhisicalStorageTests.cpp  StorageAccessorTests.cpp
tests/integration/: BaseFunctionalityTest.cpp  CMakeLists.txt  MultithreadingTest.cpp  PerformanceTest.cpp  UniversalStorageFixture.hpp
tests/mocks/: MemoryStorage.cpp  MemoryStorage.h  MockBlockManager.h  MockPhysicalStorage.h  NaivePhysicalStorage.cpp  NaivePhysicalStorage.h  StubBlockManager.h
tests/performance/: CMakeLists.txt  main.cpp
tests/unit/: BTreeTest.cpp  BlockManagerTest.cpp  CMakeLists.txt  CachingProxyStorageTest.cpp  LRUCachingProxyStorageTest.cpp  MountPointTreeTest.cpp  NaiveStorageTest.cpp  PathViewTest.cpp  PhysicalStorageTest.cpp  StorageAccessorTests.cpp
